--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <div id="content">
 
       <div id="title">
-        michidk
+        Michael Lohr aka michidk
       </div>
 
       <div class="links">
-        <a href="https://github.com/michidk">GitHub</a> | <a href="https://www.michidk.cat">Website</a>
+        <a href="https://github.com/michidk">GitHub</a> | <a href="https://www.linkedin.com/in/michael-lohr">Linked In</a>
       </div>
 
     </div>
