--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="content">
 
       <div id="title">
-        Michael Lohr aka michidk
+        Michael Lohr
       </div>
 
       <div class="links">
